[#194][be][briefing]fix: 코드리뷰 반영